<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/spacing_medium"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/coffee_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        tools:src="@drawable/cap"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/coffee_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Espresso"
        style="@style/Widget.SelectedItem"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintLeft_toRightOf="@+id/coffee_image"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/order_price"
        android:textColor="@color/colorPrice"
        style="@style/Widget.SelectedItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="@dimen/spacing_medium"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/coffee_image"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/coffee_image"
        tools:text="10$" />

    <TextView
        android:id="@+id/order_pick_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Tomorrow 02"
        android:gravity="center"
        android:drawablePadding="4dp"
        android:drawableStart="@drawable/ic_calendar"
        style="@style/Widget.Label"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/coffee_title"
        app:layout_constraintLeft_toLeftOf="@+id/coffee_title" />

    <TextView
        android:id="@+id/order_pick_time"
        style="@style/Widget.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawablePadding="4dp"
        android:drawableStart="@drawable/ic_access_time_black_24dp"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="@+id/order_pick_day"
        app:layout_constraintTop_toBottomOf="@+id/order_pick_day"
        tools:text="PM 12-3" />
</android.support.constraint.ConstraintLayout>