<tabs>
    <tab
        id="@+id/coffee"
        icon="@drawable/ic_take_away_coffee"
        activeColor="#ffff"
        barColorWhenSelected="@color/coffee_tab_color"
        badgeHidesWhenActive="true"
        title="Coffee" />
    <tab
        id="@+id/orders"
        icon="@drawable/ic_order"
        activeColor="#ffff"
        barColorWhenSelected="@color/order_tab_color"
        badgeHidesWhenActive="true"
        title="Order" />
    <tab
        id="@+id/info"
        icon="@drawable/ic_info"
        activeColor="#ffff"
        barColorWhenSelected="@color/info_tab_color"
        badgeHidesWhenActive="true"
        title="Info" />
</tabs>