<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/item_bottom_padding"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        tools:src="@drawable/cap"
        tools:ignore="ContentDescription"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/name"
        style="@style/Widget.SelectedItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/font_size_big"
        tools:text="Espresso Frappuccino"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/spacing_big"
        android:layout_marginStart="@dimen/spacing_big"
        android:layout_below="@+id/image" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        style="@style/Widget.Label"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/spacing_medium"
        android:paddingRight="@dimen/spacing_medium"
        android:textSize="@dimen/font_size_medium"
        tools:text="$ 5"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/name"
        android:layout_marginRight="55dp"
        android:layout_marginEnd="55dp" />

</RelativeLayout>